--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "float style guide",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --progress --profile --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,8 +19,18 @@
   },
   "homepage": "https://github.com/hellofloat/style-guide#readme",
   "devDependencies": {
+    "babel-core": "^6.1.20",
+    "babel-loader": "^6.1.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-2": "^6.1.18",
     "css-loader": "^0.22.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.4"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.1.18",
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2"
   }
 }
