--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "dependencies": {
     "babel-runtime": "^6.1.18",
+    "float": "hellofloat/float-sdk",
     "history": "^1.13.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
-    "react-router": "^1.0.0"
+    "react-router": "^1.0.0",
+    "superagent": "^1.4.0"
   }
 }
