--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "babel-runtime": "^6.1.18",
     "float": "hellofloat/float-sdk",
-    "history": "^1.13.1",
+    "history": "1.13.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-router": "^1.0.0",
